--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -53,7 +53,7 @@ requirements:
     - geopandas >=0.13.2,<1.0.0
     # Distributed
     - modin >=0.23.1post0,<1.0.0
-    - ray[default,data] >=2.9.0,<3.0.0
+    - ray >=2.9.0,<3.0.0
 
 
 test:
